--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                         padding: 2px; padding-left: 12px;
                                          padding-right: 12px; color:  black;
                                           text-align: center; align-items: center; color: #007bff; padding-top: 9px;">₹</span>
-    <input onchange="loanInput()" type="number" value="50000000" id="loanAmount"  required>
+    <input onchange="loanInput()" type="number" value="500000" id="loanAmount"  required>
   </div>
   
  
